--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,7 @@
   <script src="js/controllers/sign.js"></script>
   <script src="js/controllers/main.js"></script>
   <script src="js/controllers/header.js"></script>
-
+  <script src="js/controllers/basic.js"></script>
   <script src="js/controllers/main.js"></script>
   <script src="js/controllers/shops.js"></script>
   <script src="js/controllers/employees.js"></script>
