extensivepro/exprocrm issue6

--- a/app/index.html
+++ b/app/index.html
@@ -54,12 +54,15 @@
   <script src="js/services/users.js"></script>
 	<script src="js/services/pagination.js"></script>
 	<script src="js/services/localStorage.js"></script>
+  <script src="js/services/members.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/controllers/sign.js"></script>
   <script src="js/controllers/main.js"></script>
   <script src="js/controllers/header.js"></script>
 	<script src="js/controllers/basic.js"></script>
   <script src="js/controllers/users.js"></script>
+  <script src="js/controllers/members.js"></script>
+
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
 </body>
