--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,8 @@
   <script src="js/controllers/items.js"></script>
 
   <script src="js/controllers/users.js"></script>
+  <script src="js/controllers/members.js"></script>
+
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
 </body>
