--- a/app/index.html
+++ b/app/index.html
@@ -55,6 +55,7 @@
 	<script src="js/services/pagination.js"></script>
 	<script src="js/services/localStorage.js"></script>
   <script src="js/services/members.js"></script>
+  <script src="js/services/skus.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/controllers/sign.js"></script>
   <script src="js/controllers/main.js"></script>
@@ -62,6 +63,7 @@
 	<script src="js/controllers/basic.js"></script>
   <script src="js/controllers/users.js"></script>
   <script src="js/controllers/members.js"></script>
+  <script src="js/controllers/skus.js"></script>
 
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
