extensivepro/exprocrm issue7

--- a/app/index.html
+++ b/app/index.html
@@ -51,14 +51,15 @@
   
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
+  <script src="js/services/pagination.js"></script>
+  <script src="js/services/localStorage.js"></script>
   <script src="js/services/users.js"></script>
   <script src="js/services/shops.js"></script>
   <script src="js/services/employees.js"></script>
   <script src="js/services/merchants.js"></script>
   <script src="js/services/items.js"></script>
-
-  <script src="js/services/pagination.js"></script>
-  <script src="js/services/localStorage.js"></script>
+  <script src="js/services/members.js"></script>
+  <script src="js/services/skus.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/controllers/sign.js"></script>
   <script src="js/controllers/main.js"></script>
@@ -72,6 +73,7 @@
 
   <script src="js/controllers/users.js"></script>
   <script src="js/controllers/members.js"></script>
+  <script src="js/controllers/skus.js"></script>
 
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
