extensivepro/exprocrm issue8

--- a/app/index.html
+++ b/app/index.html
@@ -60,6 +60,9 @@
   <script src="js/services/items.js"></script>
   <script src="js/services/members.js"></script>
   <script src="js/services/skus.js"></script>
+  <script src="js/services/bills.js"></script>
+
+
   <script src="js/controllers.js"></script>
   <script src="js/controllers/sign.js"></script>
   <script src="js/controllers/main.js"></script>
@@ -74,6 +77,7 @@
   <script src="js/controllers/users.js"></script>
   <script src="js/controllers/members.js"></script>
   <script src="js/controllers/skus.js"></script>
+  <script src="js/controllers/bills.js"></script>
 
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
