--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,7 @@
   <script src="js/services/members.js"></script>
   <script src="js/services/skus.js"></script>
   <script src="js/services/bills.js"></script>
+  <script src="js/services/returns.js"></script>
 
 
   <script src="js/controllers.js"></script>
@@ -78,6 +79,7 @@
   <script src="js/controllers/members.js"></script>
   <script src="js/controllers/skus.js"></script>
   <script src="js/controllers/bills.js"></script>
+  <script src="js/controllers/returns.js"></script>
 
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
