--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,7 @@
   <script src="js/services/skus.js"></script>
   <script src="js/services/bills.js"></script>
   <script src="js/services/returns.js"></script>
+  <script src="js/services/accounts.js"></script>
 
 
   <script src="js/controllers.js"></script>
@@ -80,6 +81,7 @@
   <script src="js/controllers/skus.js"></script>
   <script src="js/controllers/bills.js"></script>
   <script src="js/controllers/returns.js"></script>
+  <script src="js/controllers/accounts.js"></script>
 
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
