--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,7 @@
   <script src="js/services/bills.js"></script>
   <script src="js/services/returns.js"></script>
   <script src="js/services/accounts.js"></script>
+  <script src="js/services/points.js"></script>
 
 
   <script src="js/controllers.js"></script>
@@ -82,6 +83,7 @@
   <script src="js/controllers/bills.js"></script>
   <script src="js/controllers/returns.js"></script>
   <script src="js/controllers/accounts.js"></script>
+  <script src="js/controllers/points.js"></script>
 
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
