--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,7 @@
   <script src="js/services/returns.js"></script>
   <script src="js/services/accounts.js"></script>
   <script src="js/services/points.js"></script>
+  <script src="js/services/deals.js"></script>
 
 
   <script src="js/controllers.js"></script>
@@ -76,7 +77,6 @@
   <script src="js/controllers/employees.js"></script>
   <script src="js/controllers/merchants.js"></script>
   <script src="js/controllers/items.js"></script>
-
   <script src="js/controllers/users.js"></script>
   <script src="js/controllers/members.js"></script>
   <script src="js/controllers/skus.js"></script>
@@ -84,6 +84,7 @@
   <script src="js/controllers/returns.js"></script>
   <script src="js/controllers/accounts.js"></script>
   <script src="js/controllers/points.js"></script>
+  <script src="js/controllers/deals.js"></script>
 
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
