--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,12 @@
 	<script src="lib/angular-cookies/angular-cookies.min.js"></script>
 	<script src="lib/angular-resource/angular-resource.min.js"></script>
 	<script src="lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+	<script src="lib/angular-google-chart/ng-google-chart.js"></script>
+  
   <script src="js/app.js"></script>
+  <script src="js/filters.js"></script>
+  <script src="js/directives.js"></script>
+
   <script src="js/services.js"></script>
   <script src="js/services/pagination.js"></script>
   <script src="js/services/localStorage.js"></script>
@@ -64,7 +69,7 @@
   <script src="js/services/accounts.js"></script>
   <script src="js/services/points.js"></script>
   <script src="js/services/deals.js"></script>
-
+  <script src="js/services/statistics.js"></script>
 
   <script src="js/controllers.js"></script>
   <script src="js/controllers/sign.js"></script>
@@ -84,8 +89,7 @@
   <script src="js/controllers/accounts.js"></script>
   <script src="js/controllers/points.js"></script>
   <script src="js/controllers/deals.js"></script>
+  <script src="js/controllers/merchantAnalysis.js"></script>
 
-  <script src="js/filters.js"></script>
-  <script src="js/directives.js"></script>
 </body>
 </html>
