--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
 	<script src="lib/jquery.cookie/jquery.cookie.js"></script>
 	<script src="js/custom.min.js"></script>
   
-  <script src="lib/angular/angular.js"></script>
+  <script src="lib/angular/angular.min.js"></script>
 	<script src="lib/angular-route/angular-route.min.js"></script>
 	<script src="lib/angular-cookies/angular-cookies.min.js"></script>
 	<script src="lib/angular-resource/angular-resource.min.js"></script>
