add:employee chart close:#15

--- a/app/index.html
+++ b/app/index.html
@@ -90,6 +90,7 @@
   <script src="js/controllers/points.js"></script>
   <script src="js/controllers/deals.js"></script>
   <script src="js/controllers/merchantAnalysis.js"></script>
+  <script src="js/controllers/employeeAnalysis.js"></script>
 
 </body>
 </html>
