Fixed：登录窗口，当用户账户、密码存在时，登陆提示账户、密码不能为空
extensivepro/exprocrm#36

@tsq

--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,7 @@
 	<script src="lib/jquery-migrate/jquery-migrate.min.js"></script>
 	<script src="js/jquery-ui-1.10.3.custom.min.js"></script>
 	<script src="lib/jquery.cookie/jquery.cookie.js"></script>
+	<script src="lib/autofill-event/src/autofill-event.js"></script>
 	<script src="js/custom.min.js"></script>
   
   <script src="lib/angular/angular.min.js"></script>
