--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,9 @@
   <link href="css/style.min.css" rel="stylesheet">
   <link href="css/style-responsive.min.css" rel="stylesheet">
   <link href="css/retina.css" rel="stylesheet">
+    <link href="lib/bootstrap-daterangepicker/daterangepicker-bs2.css" rel="stylesheet">
+    <link href="lib/switchery/dist/switchery.min.css" rel="stylesheet">
+    <link href="lib/bootstrap-switch-master/build/css/bootstrap3/bootstrap-switch.min.css" rel="stylesheet">
 	<!-- end: CSS -->
 
 	<!-- The HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -50,7 +53,15 @@
 	<script src="lib/angular-resource/angular-resource.min.js"></script>
 	<script src="lib/angular-ui-utils/ui-utils.min.js"></script>
 	<script src="lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+  <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="lib/angular-google-chart/ng-google-chart.js"></script>
+  <script src="lib/moment/min/moment.min.js"></script>
+  <script src="lib/bootstrap-daterangepicker/daterangepicker.js"></script>
+  <script src="lib/ng-bs-daterangepicker/src/ng-bs-daterangepicker.js"></script>
+  <script src="lib/momentjs/min/moment.min.js"></script>
+  <script src="lib/switchery/dist/switchery.min.js"></script>
+  <script src="lib/ng-switchery/src/ng-switchery.js"></script>
+  <script src="lib/bootstrap-switch-master/build/js/bootstrap-switch.min.js"></script>
   
   <script src="js/app.js"></script>
   <script src="js/filters.js"></script>
@@ -92,6 +103,7 @@
   <script src="js/controllers/points.js"></script>
   <script src="js/controllers/deals.js"></script>
   <script src="js/controllers/merchantAnalysis.js"></script>
+  <script src="js/controllers/salesAnalysis.js"></script>
   <script src="js/controllers/employeeAnalysis.js"></script>
   <script src="js/controllers/devices.js"></script>
 
