--- a/app/index.html
+++ b/app/index.html
@@ -30,9 +30,9 @@
 		<link id="ie9style" href="css/ie9.css" rel="stylesheet">
 	<![endif]-->
 	
-  	<!-- start: Favicon and Touch Icons -->
-  	<link rel="shortcut icon" href="img/favicon.ico">
-  	<!-- end: Favicon and Touch Icons -->	
+	<!-- start: Favicon and Touch Icons -->
+	<link rel="shortcut icon" href="img/favicon.ico">
+	<!-- end: Favicon and Touch Icons -->	
 </head>
 <body>
   <div ng-view></div>
@@ -48,6 +48,7 @@
 	<script src="lib/angular-route/angular-route.min.js"></script>
 	<script src="lib/angular-cookies/angular-cookies.min.js"></script>
 	<script src="lib/angular-resource/angular-resource.min.js"></script>
+	<script src="lib/angular-ui-utils/ui-utils.min.js"></script>
 	<script src="lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 	<script src="lib/angular-google-chart/ng-google-chart.js"></script>
   
@@ -71,8 +72,8 @@
   <script src="js/services/points.js"></script>
   <script src="js/services/deals.js"></script>
   <script src="js/services/statistics.js"></script>
+  <script src="js/services/devices.js"></script>
 
-  <script src="js/controllers.js"></script>
   <script src="js/controllers/sign.js"></script>
   <script src="js/controllers/main.js"></script>
   <script src="js/controllers/header.js"></script>
@@ -92,6 +93,7 @@
   <script src="js/controllers/deals.js"></script>
   <script src="js/controllers/merchantAnalysis.js"></script>
   <script src="js/controllers/employeeAnalysis.js"></script>
+  <script src="js/controllers/devices.js"></script>
 
 </body>
 </html>
