实现库存统计，代码有待清理

--- a/app/index.html
+++ b/app/index.html
@@ -106,6 +106,7 @@
   <script src="js/controllers/deals.js"></script>
   <script src="js/controllers/merchantAnalysis.js"></script>
   <script src="js/controllers/salesAnalysis.js"></script>
+  <script src="js/controllers/skusAnalysis.js"></script>
   <script src="js/controllers/employeeAnalysis.js"></script>
   <script src="js/controllers/devices.js"></script>
 
