added user registration, close #101

--- a/app/index.html
+++ b/app/index.html
@@ -109,6 +109,7 @@
   <script src="js/controllers/skusAnalysis.js"></script>
   <script src="js/controllers/employeeAnalysis.js"></script>
   <script src="js/controllers/devices.js"></script>
+  <script src="js/controllers/registerModalController.js"></script>
 
 </body>
 </html>
