Update: CRM => RMS

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
   
   
   <meta charset="utf-8">
-  <title>泛商汇CRM - 会员管理系统</title>
+  <title>泛商汇RMS - 零售管理系统</title>
 	<meta name="description" content="泛商汇RMS - 零售管理系统">
 	<meta name="author" content="Extensivepro">
 	<meta name="keyword" content="泛商汇 零售管理系统 Retail Management System">
