--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
 	<script src="lib/angular-ui-utils/ui-utils.min.js"></script>
 	<script src="lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 	<script src="lib/angular-google-chart/ng-google-chart.js"></script>
-  <script src="lib/moment/min/moment.min.js"></script>
+  <script src="lib/moment/moment.js"></script>
   <script src="lib/bootstrap-daterangepicker/daterangepicker.js"></script>
   <script src="lib/ng-bs-daterangepicker/src/ng-bs-daterangepicker.js"></script>
   <script src="lib/momentjs/min/moment.min.js"></script>
