--- a/app/index.html
+++ b/app/index.html
@@ -110,6 +110,10 @@
   <script src="js/controllers/employeeAnalysis.js"></script>
   <script src="js/controllers/devices.js"></script>
   <script src="js/controllers/registerModalController.js"></script>
+  <script type="text/javascript">
+  var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+  document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F0dcdd04100b9090c3c58fa6c5f33e427' type='text/javascript'%3E%3C/script%3E"));
+  </script>
 
 </body>
 </html>
