fixed #167. Initialize dashboard, which is probably currently full of bugs

--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/style.min.css" rel="stylesheet">
   <link href="css/retina.min.css" rel="stylesheet">
+  <link href="css/animation.css"
   <link href="lib/bootstrap-daterangepicker/daterangepicker-bs2.css" rel="stylesheet">
 	<!-- end: CSS -->
 
@@ -60,6 +61,7 @@
 	<script src="lib/angular-ui-utils/ui-utils.min.js"></script>
 	<script src="lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 	<script src="lib/angular-google-chart/ng-google-chart.js"></script>
+  <script src="lib/angular-animate/angular-animate.js"></script>
   <script src="lib/moment/moment.js"></script>
   <script src="lib/bootstrap-daterangepicker/daterangepicker.js"></script>
   <script src="lib/ng-bs-daterangepicker/src/ng-bs-daterangepicker.js"></script>
@@ -110,6 +112,7 @@
   <script src="js/controllers/employeeAnalysis.js"></script>
   <script src="js/controllers/devices.js"></script>
   <script src="js/controllers/registerModalController.js"></script>
+  <script src="js/controllers/dashboard.js"></script>
   <script type="text/javascript">
   var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
   document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F0dcdd04100b9090c3c58fa6c5f33e427' type='text/javascript'%3E%3C/script%3E"));
