Fixed: 依赖包缺失导致RMS挂断

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/style.min.css" rel="stylesheet">
   <link href="css/retina.min.css" rel="stylesheet">
-  <link href="css/animation.css"
+  <link href="css/animation.css" rel="stylesheet">
   <link href="lib/bootstrap-daterangepicker/daterangepicker-bs2.css" rel="stylesheet">
 	<!-- end: CSS -->
 
