--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
   <link href="css/style.min.css" rel="stylesheet">
   <link href="css/retina.min.css" rel="stylesheet">
   <link href="css/animation.css" rel="stylesheet">
+  <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
   <link href="lib/bootstrap-daterangepicker/daterangepicker-bs2.css" rel="stylesheet">
 	<!-- end: CSS -->
 
@@ -66,6 +67,7 @@
   <script src="lib/bootstrap-daterangepicker/daterangepicker.js"></script>
   <script src="lib/ng-bs-daterangepicker/src/ng-bs-daterangepicker.js"></script>
   <script src="lib/momentjs/min/moment.min.js"></script>
+  <script src="lib/file-saver/FileSaver.js"></script>
   
   <script src="js/app.js"></script>
   <script src="js/filters.js"></script>
