--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,7 @@
   <script src="lib/momentjs/min/moment.min.js"></script>
   <script src="lib/file-saver/FileSaver.js"></script>
   
+  <script src="js/angular-file-upload.min.js"></script>
   <script src="js/app.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
