Add 订单的列表显示及详情，Fixed 详情、编辑页面状态下，点击左侧菜单能够跳转列表界面

--- a/app/index.html
+++ b/app/index.html
@@ -91,6 +91,7 @@
   <script src="js/services/deals.js"></script>
   <script src="js/services/statistics.js"></script>
   <script src="js/services/devices.js"></script>
+  <script src="js/services/orders.js"></script>
 
   <script src="js/controllers/sign.js"></script>
   <script src="js/controllers/main.js"></script>
@@ -116,6 +117,8 @@
   <script src="js/controllers/devices.js"></script>
   <script src="js/controllers/registerModalController.js"></script>
   <script src="js/controllers/dashboard.js"></script>
+  <script src="js/controllers/orders.js"></script>
+
   <script type="text/javascript">
   var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
   document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F0dcdd04100b9090c3c58fa6c5f33e427' type='text/javascript'%3E%3C/script%3E"));
