Add 商品标签管理(查看，新增，删除) Close #257

--- a/app/index.html
+++ b/app/index.html
@@ -92,6 +92,7 @@
   <script src="js/services/statistics.js"></script>
   <script src="js/services/devices.js"></script>
   <script src="js/services/orders.js"></script>
+  <script src="js/services/tags.js"></script>
 
   <script src="js/controllers/sign.js"></script>
   <script src="js/controllers/main.js"></script>
@@ -118,6 +119,7 @@
   <script src="js/controllers/registerModalController.js"></script>
   <script src="js/controllers/dashboard.js"></script>
   <script src="js/controllers/orders.js"></script>
+  <script src="js/controllers/tags.js"></script>
 
   <script type="text/javascript">
   var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
