--- a/app/index.html
+++ b/app/index.html
@@ -54,7 +54,7 @@
 	<!-- theme scripts -->
   <!-- // <script src="js/custom.min.js"></script> -->
 	<script src="js/core.min.js"></script>
-  
+
   <script src="lib/angular/angular.min.js"></script>
 	<script src="lib/angular-route/angular-route.min.js"></script>
 	<script src="lib/angular-cookies/angular-cookies.min.js"></script>
@@ -68,7 +68,7 @@
   <script src="lib/ng-bs-daterangepicker/src/ng-bs-daterangepicker.js"></script>
   <script src="lib/momentjs/min/moment.min.js"></script>
   <script src="lib/file-saver/FileSaver.js"></script>
-  
+  <script src="js/angular-local-storage.min.js"></script>
   <script src="js/angular-file-upload.min.js"></script>
   <script src="js/app.js"></script>
   <script src="js/filters.js"></script>
@@ -92,7 +92,6 @@
   <script src="js/services/statistics.js"></script>
   <script src="js/services/devices.js"></script>
   <script src="js/services/orders.js"></script>
-  <script src="js/services/tags.js"></script>
 
   <script src="js/controllers/sign.js"></script>
   <script src="js/controllers/main.js"></script>
@@ -119,7 +118,6 @@
   <script src="js/controllers/registerModalController.js"></script>
   <script src="js/controllers/dashboard.js"></script>
   <script src="js/controllers/orders.js"></script>
-  <script src="js/controllers/tags.js"></script>
 
   <script type="text/javascript">
   var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
