Add  添加营业日报 Close #369

--- a/app/index.html
+++ b/app/index.html
@@ -120,6 +120,7 @@
   <script src="js/controllers/dashboard.js"></script>
   <script src="js/controllers/orders.js"></script>
   <script src="js/controllers/tags.js"></script>
+  <script src="js/controllers/dayBillReport.js"></script>
 
   <script type="text/javascript">
   var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
