--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,8 @@
   <link href="css/animation.css" rel="stylesheet">
   <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
   <link href="lib/bootstrap-daterangepicker/daterangepicker-bs2.css" rel="stylesheet">
-	<!-- end: CSS -->
+
+    <!-- end: CSS -->
 
 	<!-- The HTML5 shim, for IE6-8 support of HTML5 elements -->
 	<!--[if lt IE 9]>
@@ -121,6 +122,16 @@
   <script src="js/controllers/orders.js"></script>
   <script src="js/controllers/tags.js"></script>
   <script src="js/controllers/dayBillReport.js"></script>
+  <script>
+      var FileAPI = {
+          debug: true, media: true, staticPath: './FileAPI/'
+      };
+  </script>
+  <script src="js/crop/FileAPI.min.js"></script>
+  <script src="js/crop/FileAPI.exif.js"></script>
+  <script src="js/crop/jquery.fileapi.js"></script>
+  <script src="js/crop/jquery.Jcrop.min.js"></script>
+  <script src="js/crop/jquery.modal.js"></script>
 
   <script type="text/javascript">
   var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
