--- a/app/index.html
+++ b/app/index.html
@@ -152,7 +152,7 @@
   <!-- start: pic crop -->
   <script>
       var FileAPI = {
-          debug: true, media: true, staticPath: './FileAPI/'
+          debug: false, media: true, staticPath: './FileAPI/'
       };
   </script>
   <script src="js/crop/FileAPI.min.js"></script>
