Add 积分规则管理 Close #410

--- a/app/index.html
+++ b/app/index.html
@@ -147,6 +147,7 @@
   <script src="js/controllers/orders.js"></script>
   <script src="js/controllers/tags.js"></script>
   <script src="js/controllers/dayBillReport.js"></script>
+  <script src="js/controllers/pointRule.js"></script>
   <!--end: angularjs -->
 
   <!-- start: pic crop -->
