--- a/app/index.html
+++ b/app/index.html
@@ -148,6 +148,7 @@
   <script src="js/controllers/tags.js"></script>
   <script src="js/controllers/dayBillReport.js"></script>
   <script src="js/controllers/pointRule.js"></script>
+  <script src="js/controllers/groups.js"></script>
   <!--end: angularjs -->
 
   <!-- start: pic crop -->
