--- a/app/index.html
+++ b/app/index.html
@@ -119,6 +119,7 @@
   <script src="js/services/devices.js"></script>
   <script src="js/services/orders.js"></script>
   <script src="js/services/tags.js"></script>
+  <script src="js/services/groups.js"></script>
 
   <script src="js/controllers/sign.js"></script>
   <script src="js/controllers/main.js"></script>
