--- a/app/index-build.html
+++ b/app/index-build.html
@@ -24,6 +24,11 @@
 </head>
 <body>
   <div ng-view></div>
+  <script>
+      var FileAPI = {
+          debug: false, media: true, staticPath: './FileAPI/'
+      };
+  </script>
   <script src="js/all.min.js"></script>
 
   <script type="text/javascript">
