Fixed：resume baidu map

--- a/app/index.html
+++ b/app/index.html
@@ -173,7 +173,7 @@
   <!--end: tongji -->
 
   <!-- start: baidu map -->
-  <!-- // <script type="text/javascript" src="http://api.map.baidu.com/api?v=1.5&amp;ak=N7UZXn7zNIOqrQUuGq2C9X74"></script> -->
+   <script type="text/javascript" src="http://api.map.baidu.com/api?v=1.5&amp;ak=N7UZXn7zNIOqrQUuGq2C9X74"></script>
   <!-- end: baidu map -->
 </body>
 </html>
