--- a/app/index.html
+++ b/app/index.html
@@ -81,14 +81,16 @@
   <script src="js/core.min.js"></script>
 
   <!-- start: angularjs-->
-  <script src="lib/angular/angular.min.js"></script>
-  <script src="lib/angular-route/angular-route.min.js"></script>
-  <script src="lib/angular-cookies/angular-cookies.min.js"></script>
-  <script src="lib/angular-resource/angular-resource.min.js"></script>
+  <script src="lib/angular/angular.js"></script>
+  <script src="lib/angular-route/angular-route.js"></script>
+  <script src="lib/angular-cookies/angular-cookies.js"></script>
+  <script src="lib/angular-resource/angular-resource.js"></script>
   <script src="lib/angular-ui-utils/ui-utils.min.js"></script>
   <script src="lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
   <script src="lib/angular-google-chart/ng-google-chart.js"></script>
   <script src="lib/angular-animate/angular-animate.js"></script>
+  <script src="lib/angular-sanitize/angular-sanitize.min.js"></script>
+  <script src="lib/ng-csv/build/ng-csv.js"></script>
   <script src="lib/moment/moment.js"></script>
   <script src="lib/bootstrap-daterangepicker/daterangepicker.js"></script>
   <script src="lib/ng-bs-daterangepicker/src/ng-bs-daterangepicker.js"></script>
