--- a/app/index.html
+++ b/app/index.html
@@ -96,6 +96,7 @@
   <script src="lib/ng-bs-daterangepicker/src/ng-bs-daterangepicker.js"></script>
   <script src="lib/momentjs/min/moment.min.js"></script>
   <script src="lib/file-saver/FileSaver.js"></script>
+  <script src="lib/csv-js/csv.js"></script>
   <script src="js/angular-local-storage.min.js"></script>
   <script src="js/angular-file-upload.min.js"></script>
   <script src="js/app.js"></script>
