--- a/app/index.html
+++ b/app/index.html
@@ -42,42 +42,20 @@
 
   <!-- start: JavaScript-->
   <!--[if !IE]>-->
-
-  <script src="js/jquery-2.1.0.min.js"></script>
-
-  <!--<![endif]-->
-
-  <!--[if IE]>
-
-  <script src="js/jquery-1.11.0.min.js"></script>
-
-  <![endif]-->
-
-  <!--[if !IE]>-->
-
+  <script src="lib/jquery/dist/jquery.js"></script>
   <script type="text/javascript">
-      window.jQuery || document.write("<script src='js/jquery-2.1.0.min.js'>" + "<" + "/script>");
+      window.jQuery || document.write("<script src='lib/jquery/dist/jquery.js'>" + "<" + "/script>");
   </script>
-
   <!--<![endif]-->
-
-  <!--[if IE]>
-
-  <script type="text/javascript">
-      window.jQuery || document.write("<script src='js/jquery-1.11.0.min.js'>" + "<" + "/script>");
-  </script>
-
-  <![endif]-->
-  <script src="lib/jquery-migrate/jquery-migrate.min.js"></script>
-  <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="lib/jquery-migrate/jquery-migrate.js"></script>
+  <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
 
   <!-- page scripts -->
-  <script src="js/jquery-ui-1.10.3.custom.min.js"></script>
+  <!-- // <script src="js/jquery-ui-1.10.3.custom.min.js"></script> -->
   <!--[if lte IE 8]><script language="javascript" type="text/javascript" src="assets/js/excanvas.min.js"></script><![endif]-->
   <script src="lib/autofill-event/src/autofill-event.js"></script>
 
   <!-- theme scripts -->
-  <script src="js/custom.min.js"></script>
   <script src="js/core.min.js"></script>
 
   <!-- start: angularjs-->
