Fixed: 上传数据的格式化

--- a/app/index.html
+++ b/app/index.html
@@ -44,10 +44,10 @@
   <!--[if !IE]>-->
   <script src="lib/jquery/dist/jquery.js"></script>
   <script type="text/javascript">
-      window.jQuery || document.write("<script src='lib/jquery/dist/jquery.js'>" + "<" + "/script>");
+      window.jQuery || document.write("<script src='lib/jquery/dist/jquery.min.js'>" + "<" + "/script>");
   </script>
   <!--<![endif]-->
-  <script src="lib/jquery-migrate/jquery-migrate.js"></script>
+  <script src="lib/jquery-migrate/jquery-migrate.min.js"></script>
   <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
 
   <!-- page scripts -->
