Update：新用户注册

--- a/app/index.html
+++ b/app/index.html
@@ -123,7 +123,7 @@
   <script src="js/controllers/skusAnalysis.js"></script>
   <script src="js/controllers/employeeAnalysis.js"></script>
   <script src="js/controllers/devices.js"></script>
-  <script src="js/controllers/registerModalController.js"></script>
+  <script src="js/controllers/register.js"></script>
   <script src="js/controllers/dashboard.js"></script>
   <script src="js/controllers/orders.js"></script>
   <script src="js/controllers/tags.js"></script>
