--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,8 @@
   <script src="lib/angular-local-storage/angular-local-storage.min.js"></script>
   <script src="lib/angular-file-upload/angular-file-upload.min.js"></script>
   <script src="lib/ng-csv/build/ng-csv.js"></script>
+  <script src="lib/d3/d3.js"></script>
+  <script src="lib/angular-charts/dist/angular-charts.js"></script>
   <script src="lib/moment/moment.js"></script>
   <script src="lib/bootstrap-daterangepicker/daterangepicker.js"></script>
   <script src="lib/ng-bs-daterangepicker/src/ng-bs-daterangepicker.js"></script>
